Make Gradle build runnable from repository root